--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="style-src 'self' 'unsafe-inline';">
   <title>90 Day Review – Internal Launch Announcement</title>
   <meta name="color-scheme" content="light dark" />
   <style>
